/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * OpenCRVS is also distributed under the terms of the Civil Registration
 * & Healthcare Disclaimer located at http://opencrvs.org/license.
 *
 * Copyright (C) The OpenCRVS Authors located at https://github.com/opencrvs/opencrvs-core/blob/master/AUTHORS.
 */
import {
  DeduplicationConfig,
  getUUID,
  UUID,
  DeduplicationConfigInput,
  FieldValue,
  eventQueryDataGenerator,
  ClauseInput,
  Clause
} from '@opencrvs/commons'
import { v2BirthEvent } from '@opencrvs/commons/fixtures'
import { getOrCreateClient } from '@events/storage/elasticsearch'
import { getEventIndexName } from '@events/storage/__mocks__/elasticsearch'
import { encodeEventIndex } from '@events/service/indexing/utils'
import {
  generateElasticsearchQuery,
  searchForDuplicates
} from './deduplication'

const similarNamedChild: ClauseInput = {
  type: 'fuzzy',
  fieldId: 'child.name'
}

const childDobWithin5Days: ClauseInput = {
  type: 'dateDistance',
  fieldId: 'child.dob',
  options: {
    days: 5
  }
}

const similarNamedMother: ClauseInput = {
  type: 'fuzzy',
  fieldId: 'mother.name'
}

const similarAgedMother: ClauseInput = {
  type: 'dateDistance',
  fieldId: 'mother.dob',
  options: {
    days: 365
  }
}

const sameMotherNid: ClauseInput = {
  type: 'strict',
  fieldId: 'mother.nid'
}

const childDobWithin9Months: ClauseInput = {
  type: 'dateDistance',
  fieldId: 'child.dob',
  options: {
    days: 273
  }
}

const childDobWithin3Years: ClauseInput = {
  type: 'dateDistance',
  fieldId: 'child.dob',
  options: {
    days: 1095
  }
}

const exactNamedChild: ClauseInput = {
  type: 'strict',
  fieldId: 'child.name'
}

const LEGACY_BIRTH_DEDUPLICATION_RULES = {
  id: 'Legacy birth deduplication check',
  label: {
    id: 'deduplication.legacy',
    defaultMessage: 'Legacy birth deduplication check',
    description: 'Legacy birth deduplication check'
  },
  query: {
    type: 'or',
    clauses: [
      {
        type: 'and',
        clauses: [
          similarNamedChild,
          childDobWithin5Days,
          similarAgedMother,
          similarAgedMother,
          sameMotherNid
        ]
      },
      {
        type: 'and',
        clauses: [
          similarNamedMother,
          similarAgedMother,
          sameMotherNid,
          childDobWithin9Months
        ]
      },
      {
        type: 'and',
        clauses: [
          exactNamedChild,
          childDobWithin3Years,
          similarNamedMother,
          similarAgedMother,
          sameMotherNid
        ]
      }
    ]
  }
} satisfies DeduplicationConfigInput

async function findDuplicates(eventComparison: Record<string, FieldValue[]>) {
  const esClient = getOrCreateClient()
  const existingEvent = Object.fromEntries(
    Object.entries(eventComparison).map(([key, values]) => [key, values[0]])
  )
  const newEvent = Object.fromEntries(
    Object.entries(eventComparison).map(([key, values]) => [key, values[1]])
  )

  await esClient.update({
    index: getEventIndexName(),
    id: getUUID(),
    body: {
      doc: encodeEventIndex(
        eventQueryDataGenerator({
          declaration: existingEvent
        }),
        v2BirthEvent
      ),
      doc_as_upsert: true
    },
    refresh: 'wait_for'
  })

  const results = await searchForDuplicates(
    eventQueryDataGenerator({ declaration: newEvent }),
    DeduplicationConfig.parse(LEGACY_BIRTH_DEDUPLICATION_RULES),
    v2BirthEvent
  )

  return results
}

describe('deduplication query input conversion', () => {
  it('should convert similar child name to fuzzy query', () => {
    const encodedEventIndex = encodeEventIndex(
      eventQueryDataGenerator({
        declaration: {
          'child.name': { firstname: 'John', surname: 'Smith' }
        }
      }),
      v2BirthEvent
    )
    expect(
      generateElasticsearchQuery(
        encodedEventIndex,
        Clause.parse(similarNamedChild),
        v2BirthEvent
      )
    ).toMatchSnapshot()
  })

  it('should convert childDobWithin5Days to dateDistance query', () => {
    const encodedEventIndex = encodeEventIndex(
      eventQueryDataGenerator({
        declaration: {
          'child.dob': '2011-11-11'
        }
      }),
      v2BirthEvent
    )
    expect(
      generateElasticsearchQuery(
        encodedEventIndex,
        Clause.parse(childDobWithin5Days),
        v2BirthEvent
      )
    ).toMatchSnapshot()
  })

  it('should convert similarNamedMother to fuzzy query', () => {
    const encodedEventIndex = encodeEventIndex(
      eventQueryDataGenerator({
        declaration: {
          'mother.name': { firstname: 'Janet', surname: 'Smith' }
        }
      }),
      v2BirthEvent
    )
    expect(
      generateElasticsearchQuery(
        encodedEventIndex,
        Clause.parse(similarNamedMother),
        v2BirthEvent
      )
    ).toMatchSnapshot()
  })

  it('should convert similarAgedMother to dateDistance query', () => {
    const encodedEventIndex = encodeEventIndex(
      eventQueryDataGenerator({
        declaration: {
          'mother.dob': '1999-11-11'
        }
      }),
      v2BirthEvent
    )
    expect(
      generateElasticsearchQuery(
        encodedEventIndex,
        Clause.parse(similarAgedMother),
        v2BirthEvent
      )
    ).toMatchSnapshot()
  })

  it('should convert sameMotherNid to strict query', () => {
    const encodedEventIndex = encodeEventIndex(
      eventQueryDataGenerator({
        declaration: {
          'mother.nid': '1232314352'
        }
      }),
      v2BirthEvent
    )
    expect(
      generateElasticsearchQuery(
        encodedEventIndex,
        Clause.parse(sameMotherNid),
        v2BirthEvent
      )
    ).toMatchSnapshot()
  })

  it('should convert exactNamedChild to strict query', () => {
    const encodedEventIndex = encodeEventIndex(
      eventQueryDataGenerator({
        declaration: {
          'child.name': { firstname: 'John', surname: 'Smith' }
        }
      }),
      v2BirthEvent
    )
    expect(
      generateElasticsearchQuery(
        encodedEventIndex,
        Clause.parse(exactNamedChild),
        v2BirthEvent
      )
    ).toMatchSnapshot()
  })
})

describe('deduplication tests', () => {
  it('does not find duplicates with completely different details', async () => {
    await expect(
      findDuplicates({
        'child.name': [
          { firstname: 'John', surname: 'Smith' },
          { firstname: 'Riku', surname: 'Rouvila' }
        ],
        'child.dob': ['2011-11-11', '2000-10-13'],
        'mother.name': [
          { firstname: 'Mother', surname: 'Smith' },
          { firstname: 'Sofia', surname: 'Matthews' }
        ],
        'mother.dob': ['2000-11-11', '1980-09-02'],
        'mother.nid': ['23412387', '8653434']
      })
    ).resolves.toStrictEqual([])
  })
  it('does not find duplicates with the same id', async () => {
    const esClient = getOrCreateClient()

    const event = eventQueryDataGenerator({
      id: '123-123-123-123' as UUID,
      declaration: { 'child.dob': '2011-11-11' }
    })

    await esClient.update({
      index: getEventIndexName(),
      id: event.id,
      body: {
        doc: encodeEventIndex(event, v2BirthEvent),
        doc_as_upsert: true
      },
      refresh: 'wait_for'
    })

    const duplicateEvent = eventQueryDataGenerator({
      declaration: { 'child.dob': '2011-11-11' }
    })

    const matchResultForDuplicateEvent = await searchForDuplicates(
      duplicateEvent,
      DeduplicationConfig.parse(LEGACY_BIRTH_DEDUPLICATION_RULES),
      v2BirthEvent
    )
    expect(matchResultForDuplicateEvent).toHaveLength(1)

    const duplicateEventWithSameId = eventQueryDataGenerator({
      id: '123-123-123-123' as UUID,
      declaration: { 'child.dob': '2011-11-11' }
    })

    const matchResultForEventWithSameId = await searchForDuplicates(
      duplicateEventWithSameId,
      DeduplicationConfig.parse(LEGACY_BIRTH_DEDUPLICATION_RULES),
      v2BirthEvent
    )
    expect(matchResultForEventWithSameId).toHaveLength(0)
  })
  it('finds a duplicate with very similar details', async () => {
    await expect(
      findDuplicates({
        // Similar child's firstname(s)
        'child.name': [
          { firstname: 'John', surname: 'Smith' },
          { firstname: 'John', surname: 'Smith' }
        ],
        // Date of birth within 5 days
        'child.dob': ['2011-11-11', '2011-11-11'],
        // Similar Mother’s firstname(s)
        'mother.name': [
          { firstname: 'Mother', surname: 'Smith' },
          { firstname: 'Mothera', surname: 'Smith' }
        ],
        // Similar Mother’s date of birth or Same Age of mother
        'mother.dob': ['2000-11-11', '2000-11-12'],
        // Same mother’s NID
        'mother.nid': ['23412387', '23412387']
      })
    ).resolves.toHaveLength(1)
  })

  it('finds no duplicate with different mother nid', async () => {
    await expect(
      findDuplicates({
        'child.name': [
          { firstname: 'John', surname: 'Smith' },
          { firstname: 'John', surname: 'Smith' }
        ],
        'child.dob': ['2011-11-11', '2011-11-11'],
        'mother.name': [
          { firstname: 'Mother', surname: 'Smith' },
          { firstname: 'Mother', surname: 'Smith' }
        ],
        'mother.dob': ['2000-11-12', '2000-11-12'],
        // Different mother’s NID
        'mother.nid': ['23412387', '23412388']
      })
    ).resolves.toHaveLength(0)
  })

  it('finds no duplicates with very different details', async () => {
    await expect(
      findDuplicates({
        'child.name': [
          { firstname: 'John', surname: 'Smith' },
          { firstname: 'Mathew', surname: 'Wilson' }
        ],
        'child.dob': ['2011-11-11', '1980-11-11'],
        'mother.name': [
          { firstname: 'Mother', surname: 'Smith' },
          { firstname: 'Harriet', surname: 'Wilson' }
        ],
        'mother.dob': ['2000-11-12', '1992-11-12'],
        'mother.nid': ['23412387', '123123']
      })
    ).resolves.toHaveLength(0)
  })

  it('finds a duplicate even if the firstName of child is not given', async () => {
    await expect(
      findDuplicates({
        'child.name': [
          { firstname: 'John', surname: 'Smith' },
          { firstname: '', surname: 'Smiht' }
        ],
        'child.dob': ['2011-11-11', '2011-11-01'],
        'mother.name': [
          { firstname: 'Mother', surname: 'Smith' },
          { firstname: 'Mother', surname: 'Smith' }
        ],
        'mother.dob': ['2000-11-12', '2000-11-12']
      })
    ).resolves.toHaveLength(1)
  })

  describe('same mother two births within 9 months of each other', () => {
    it('finds a duplicate with same mother two births within 9 months', async () => {
      await expect(
        findDuplicates({
          'child.name': [
            { firstname: 'John', surname: 'Smith' },
            { firstname: 'Janet', surname: 'Smith' }
          ],
          'child.dob': ['2011-11-11', '2011-12-01'],
          'mother.name': ['Mother', 'Mother'],
          'mother.dob': ['2000-11-12', '2000-11-12'],
          'mother.nid': ['23412387', '23412387']
        })
      ).resolves.toHaveLength(1)
    })

    it('births more than 9 months apart', async () => {
      await expect(
        findDuplicates({
          'child.name': [
            { firstname: 'John', surname: 'Smith' },
            { firstname: 'Janet', surname: 'Smith' }
          ],
          'child.dob': ['2011-11-11', '2010-10-01'],
          'mother.name': [
            { firstname: 'Mother', surname: 'Smith' },
            { firstname: 'Mother', surname: 'Smith' }
          ],
          'mother.dob': ['2000-11-12', '2000-11-12'],
          'mother.nid': ['23412387', '23412387']
        })
      ).resolves.toStrictEqual([])
    })
  })

  it('finds a duplicate for even there is a 3 year gap', async () => {
    await expect(
      findDuplicates({
        'child.dob': ['2011-11-11', '2014-11-01'],
        'child.name': ['John', 'John'],
        'mother.name': [
          { firstname: 'Mother', surname: 'Smith' },
          { firstname: 'Mother', surname: 'Smith' }
        ],
        'mother.dob': ['2000-11-12', '2000-11-12'],
        'mother.nid': ['23412387', '23412387']
      })
    ).resolves.toHaveLength(1)
  })
})
